# gh-report-gen

./: CHANGELOG  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  toolfmt.toml
.github/workflows/: cd.yaml  ci.yaml
dev/makefiles/: format_makefile.toml  lint_makefile.toml  test_makefile.toml
src/: lib.rs  main.rs  prelude.rs
src/cli/: mod.rs
src/github/: client.rs  mod.rs
src/github/gql/: mod.rs  query.graphql  query.rs
src/report/: mod.rs
src/report/templates/: default.tmpl
